unit tests completed with mockMvc